added BadRequestError and error handling for join endpoints
