# backend/studenci/router.js
@@ -5,6 +5,7 @@ import {
   getStudenci,
   deleteStudent,
   updateStudent,
+  joinStudentToPlany,
 } from "./handlers.js";
 
 export function studenciRouter(dbClient) {
@@ -17,6 +18,8 @@ export function studenciRouter(dbClient) {
   router.delete("/:id", handler(deleteStudent(dbClient)));
 
   router.put("/:id", handler(updateStudent(dbClient)));
+
+  router.post("/:id/dolacz-do-planu", handler(joinStudentToPlany(dbClient)));
 
   return router;
 }
